--- a/style.css
+++ b/style.css
@@ -6,33 +6,46 @@ button {
 }
 
 #list {
-  padding: 1em; background: rgba(0, 0, 0, 0.5); color: white;
+  padding: 1em;
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
   width: 6em;
   position: fixed;
   border-radius: 1em;
-    top: 3em;
+  top: 3em;
   left: 0.5em;
-    height: 1em;
+  height: 1em;
   backdrop-filter: blur(0px);
   transition: height 1s, backdrop-filter 0.5s, width 1s, top 1s, left 1s, border-radius 1s;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-#list[open] { 
+#list[open] {
   border-radius: 0;
-    top: 0;
+  top: 0;
   left: 0;
   height: 100%;
   width: 100%;
   backdrop-filter: blur(50px);
 }
 
-
 .counter {
-  font-family: monospace; 
+  font-family: monospace;
   font-size: 2em;
-   padding: 0.1em;
-   color: white;
-   border-radius: 0.5em;
-   background: rgba(0, 0, 0, 0.5);
+  padding: 0.1em;
+  color: white;
+  border-radius: 0.5em;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.price:after {
+  content: ' Bruhs'
+}
+
+.price {
+  display: block;
+}
+
+.price:before {
+  content: 'Costs '
 }
