--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ button {
   border: 0;
   border-radius: 1em;
   color: white;
+  margin-left: 1em;
 }
 
 #list {
@@ -40,10 +41,6 @@ button {
 
 .price:after {
   content: ' Bruhs'
-}
-
-.price {
-  display: block;
 }
 
 .price:before {
