--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 button {
-  background: rgba(0, 0, 0, 0.5);
+  background: linear-gradient(to bottom right, lightslategray, transparent);
   border: 0;
   border-radius: 1em;
+  padding: 0.5em;
   color: white;
   margin-left: 1em;
 }
