--- a/style.css
+++ b/style.css
@@ -53,3 +53,28 @@ button {
 #strength:before {
   content: 'Bruh strength: '
 }
+
+#beagle {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -100;
+}
+
+header {
+  float: right;
+}
+
+header a {
+  float: right;
+  border-radius: 1em;
+  text-decoration: none;
+  color: black;
+  background: white;
+}
+
+#width::before {
+  content: 'Beagle width: '
+}
