--- a/style.css
+++ b/style.css
@@ -2,9 +2,18 @@ button {
   background: linear-gradient(to bottom right, lightslategray, transparent);
   border: 0;
   border-radius: 1em;
-  padding: 0.5em;
-  color: white;
+  padding: .5em;
+  color: #fff;
   margin-left: 1em;
+  cursor: pointer;
+  box-shadow: inset 0 0 0 black;
+  transition: box-shadow .5s;
+}
+
+button:active {
+  box-shadow: inset 0 0 10px black;
+  border: none;
+  outline: none;
 }
 
 #list {
