--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ button:active {
 }
 
 #list {
-  width: max-content;
+  width: 97%;
   padding: 1em;
   background: rgba(0, 0, 0, 0.5);
   color: white;
@@ -26,14 +26,19 @@ button:active {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   position: absolute;
   bottom: 0.3em;
+  height: 1em;
+  backdrop-filter: blur(50px);
+  transition: height 0.3s ease-out;
 }
 
-#list *:not(summary) {
-  transition: font-size 0.3s ease-out;
-  font-size: 0;
+#list[open] {
+  transition: height 0.3s ease-out;
+  height: 94vh;
+  overflow: scroll;
+  overflow-x: hidden;
 }
 
-#list[open] *:not(summary) {
+#list div {
   font-size: 1em;
 }
 
@@ -72,11 +77,7 @@ button:active {
   z-index: -100;
 }
 
-header {
-  float: right;
-}
-
-header a {
+#list summary a {
   float: right;
   border-radius: 1em;
   text-decoration: none;
