--- a/style.css
+++ b/style.css
@@ -17,25 +17,36 @@ button:active {
 }
 
 #list {
-  width: 97%;
   padding: 1em;
   background: rgba(0, 0, 0, 0.5);
   color: white;
   border-radius: 1em;
   backdrop-filter: blur(0px);
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  position: absolute;
-  bottom: 0.3em;
   height: 1em;
+  bottom: 0.3em;
+  position: absolute;
+  width: 10em;
   backdrop-filter: blur(50px);
-  transition: height 0.3s ease-out;
+  transition: height 0.3s ease-out, width 0.3s ease-out;
 }
 
 #list[open] {
-  transition: height 0.3s ease-out;
-  height: 94vh;
+  height: 100vh;
+  width: 100vw;
+  border-radius: 0;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  padding-left: 1em;
   overflow: scroll;
   overflow-x: hidden;
+}
+
+#list[open] summary {
+  padding-right: 1em;
 }
 
 #list div {
