--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 button {
-  background: linear-gradient(to bottom right, lightslategray, transparent);
+  background: white;
+  backdrop-filter: blur(50px);
   border: 0;
   border-radius: 1em;
   padding: .5em;
-  color: #fff;
+  color: black;
   margin-left: 1em;
   cursor: pointer;
   box-shadow: inset 0 0 0 black;
-  transition: box-shadow .5s;
+  transition: box-shadow .5s ease-out;
 }
 
 button:active {
