--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ button:active {
   position: absolute;
   width: 10em;
   backdrop-filter: blur(50px);
-  transition: height 0.3s ease-out, width 0.3s ease-out;
+  transition: height 1s cubic-bezier(0.175, 0.885, 0.32, 1.275), width 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 #list[open] {
