--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ button:active {
 }
 
 #list[open] {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   border-radius: 0;
   position: fixed;
   bottom: 0;
