--- a/style.css
+++ b/style.css
@@ -39,8 +39,8 @@ details[open] {
   width: 100%;
   border-radius: 0;
   position: fixed;
-  bottom: 0;
-  left: 0;
+  top: 0;
+  right: 0;
   margin: 0;
   padding: 0;
   padding-left: 1em;
