--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ details article {
 }
 
 .counter::before {
-  content: 'B:';
+  content: ':)';
   margin-right: 1em;
   color: transparent;
   border-radius: 10em;
