--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 button {
   background: white;
-  backdrop-filter: blur(50px);
   border: 0;
   border-radius: 1em;
   padding: .5em;
@@ -31,6 +30,7 @@ details {
   z-index: 10;
   width: 10em;
   backdrop-filter: blur(50px);
+  -webkit-backdrop-filter: blur(50px);
   top: 100%;
 }
 
@@ -53,13 +53,12 @@ details[open] summary {
 }
 
 details article {
-  backdrop-filter: blur(10px);
+  background: rgba(0, 0, 0, 0.5);
   border-radius: 1em;
   margin: 1em;
   display: inline-block;
   padding: 1em;
   font-size: 1em;
-  width: max-content;
 }
 
 .counter {
@@ -132,10 +131,12 @@ details summary a {
 @keyframes slidein {
   from {
     filter: blur(50px);
+    -webkit-filter: blur(50px);
     right: -50%;
   }
   to {
     filter: blur(0px);
+    -webkit-filter: blur(0px);
     right: 1em;
   }
 }
@@ -143,10 +144,12 @@ details summary a {
 @keyframes slideout {
   to {
     filter: blur(50px);
+    -webkit-filter: blur(50px);
     right: -50%;
   }
   from {
     filter: blur(0px);
+    -webkit-filter: blur(0px);
     right: 1em;
   }
 }
