--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ details {
 }
 
 details[open] {
-  transition: top ease-out 0.7s;
+  transition: top 0.5s;
   height: 100%;
   width: 100%;
   border-radius: 0;
